--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ motto:
 email: zhenglei123a@gmail.com
 description: 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://justme.cf" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 twitter_username:
 github_username: zlei1
 
